<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1.0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/TitleText"
            android:text="@string/app_name" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_viewerscontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageviewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="visible"/>

        <leadtools.camera.CameraView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:keepScreenOn="true"
            app:aspectRatio="16:9"
            app:autoFocus="true"
            app:facing="back"
            app:flash="auto"
            app:maxPreviewImages="4"
            app:maxPreviewSizeMP="1.0" />

        <com.senarios.checksandcards.OverlayView
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.senarios.checksandcards.ShadowedScrollView
            android:id="@+id/bottomScrollView"
            style="@style/ShadowedScrollViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_image_live_capture"
                    style="@style/ActionButtonStyle"
                    android:contentDescription="@string/image_live_capture"
                    android:drawableTop="@drawable/image_live_capture"
                    android:onClick="onSelectImage"
                    android:text="@string/image_live_capture" />

                <Button
                    android:id="@+id/btn_image_gallery"
                    style="@style/ActionButtonStyle"
                    android:contentDescription="@string/image_gallery"
                    android:drawableTop="@drawable/image_gallery"
                    android:text="@string/image_gallery"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_image_browse"
                    style="@style/ActionButtonStyle"
                    android:contentDescription="@string/image_file"
                    android:drawableTop="@drawable/open"
                    android:text="@string/image_file"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_image_capture"
                    style="@style/ActionButtonStyle"
                    android:drawableTop="@drawable/image_camera"
                    android:text="@string/image_take_picture"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/btn_recognize_zone"
                    style="@style/ActionButtonStyle"
                    android:contentDescription="@string/ocr_recognize_zone"
                    android:drawableTop="@drawable/select"
                    android:text="@string/ocr_recognize_zone"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_settings"
                    style="@style/ActionButtonStyle"
                    android:contentDescription="@string/settings"
                    android:drawableTop="@drawable/settings"
                    android:text="@string/settings"
                    android:visibility="gone" />

            </LinearLayout>
        </com.senarios.checksandcards.ShadowedScrollView>

        <View
            android:id="@+id/bottomShadowLeft"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shadow_left"/>

        <View
            android:id="@+id/bottomShadowRight"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/shadow_right"/>
    </RelativeLayout>

</LinearLayout>